Add new files/plots after prediction

--- a/jupyter_notebooks/ModellingEvaluation.ipynb
+++ b/jupyter_notebooks/ModellingEvaluation.ipynb
@@ -1250,6 +1250,88 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "Your branch is ahead of 'origin/main' by 4 commits.\n",
+      "  (use \"git push\" to publish your local commits)\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\t\u001b[31mmodified:   jupyter_notebooks/ModellingEvaluation.ipynb\u001b[m\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git add ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 2aa8094] Add new files/plots after prediction\n",
+      " 8 files changed, 69 insertions(+), 309 deletions(-)\n",
+      " rename {jupyter_notebooks => .Trash-1000/files}/Notebook_Template.ipynb (100%)\n",
+      " create mode 100644 .Trash-1000/info/Notebook_Template.ipynb.trashinfo\n",
+      " delete mode 100644 jupyter_notebooks/.ipynb_checkpoints/Notebook_Template-checkpoint.ipynb\n",
+      " rewrite outputs/v1/model_training_acc.png (99%)\n",
+      " rewrite outputs/v1/model_training_losses.png (99%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"Add new files/plots after prediction\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/Flora-King/Mildew_Detection_pjkt\n",
+      " \u001b[31m! [rejected]       \u001b[m main -> main (fetch first)\n",
+      "\u001b[31merror: failed to push some refs to 'https://github.com/Flora-King/Mildew_Detection_pjkt'\n",
+      "\u001b[m\u001b[33mhint: Updates were rejected because the remote contains work that you do\u001b[m\n",
+      "\u001b[33mhint: not have locally. This is usually caused by another repository pushing\u001b[m\n",
+      "\u001b[33mhint: to the same ref. You may want to first integrate the remote changes\u001b[m\n",
+      "\u001b[33mhint: (e.g., 'git pull ...') before pushing again.\u001b[m\n",
+      "\u001b[33mhint: See the 'Note about fast-forwards' in 'git push --help' for details.\u001b[m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
