Add new plots after prediction

--- a/jupyter_notebooks/ModellingEvaluation.ipynb
+++ b/jupyter_notebooks/ModellingEvaluation.ipynb
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1285,20 +1285,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 2aa8094] Add new files/plots after prediction\n",
-      " 8 files changed, 69 insertions(+), 309 deletions(-)\n",
-      " rename {jupyter_notebooks => .Trash-1000/files}/Notebook_Template.ipynb (100%)\n",
-      " create mode 100644 .Trash-1000/info/Notebook_Template.ipynb.trashinfo\n",
-      " delete mode 100644 jupyter_notebooks/.ipynb_checkpoints/Notebook_Template-checkpoint.ipynb\n",
-      " rewrite outputs/v1/model_training_acc.png (99%)\n",
-      " rewrite outputs/v1/model_training_losses.png (99%)\n"
+      "[main 020571c] Add new files/plots after prediction\n",
+      " 1 file changed, 82 insertions(+)\n"
      ]
     }
    ],
@@ -1308,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
