Add new files/plots after prediction

--- a/jupyter_notebooks/ModellingEvaluation.ipynb
+++ b/jupyter_notebooks/ModellingEvaluation.ipynb
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {
     "id": "aKlnIozA4eQO",
     "outputId": "fd09bc1f-adb1-4511-f6ce-492a6af570c0"
@@ -1240,7 +1240,9 @@
       "node_modules/\n",
       ".github/\n",
       "cloudinary_python.txt\n",
-      "kaggle.json"
+      "kaggle.json\n",
+      "inputs/cherryleaves_dataset/cherry-leaves/train\n",
+      "inputs/cherryleaves_dataset/cherry-leaves/test"
      ]
     }
    ],
@@ -1250,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1258,13 +1260,13 @@
      "output_type": "stream",
      "text": [
       "On branch main\n",
-      "Your branch is ahead of 'origin/main' by 4 commits.\n",
+      "Your branch is ahead of 'origin/main' by 6 commits.\n",
       "  (use \"git push\" to publish your local commits)\n",
       "\n",
       "Changes not staged for commit:\n",
       "  (use \"git add <file>...\" to update what will be committed)\n",
       "  (use \"git restore <file>...\" to discard changes in working directory)\n",
-      "\t\u001b[31mmodified:   jupyter_notebooks/ModellingEvaluation.ipynb\u001b[m\n",
+      "\t\u001b[31mmodified:   .gitignore\u001b[m\n",
       "\n",
       "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
      ]
@@ -1276,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1285,15 +1287,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 020571c] Add new files/plots after prediction\n",
-      " 1 file changed, 82 insertions(+)\n"
+      "[main c513cdb] Add new files/plots after prediction\n",
+      " 1 file changed, 3 insertions(+), 1 deletion(-)\n"
      ]
     }
    ],
@@ -1303,7 +1305,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/bash: line 1: pull.rebase: command not found\n"
+     ]
+    }
+   ],
+   "source": [
+    "!gipull.rebase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git config --global pull.rebase true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1311,12 +1339,11 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/Flora-King/Mildew_Detection_pjkt\n",
-      " \u001b[31m! [rejected]       \u001b[m main -> main (fetch first)\n",
+      " \u001b[31m! [rejected]       \u001b[m main -> main (non-fast-forward)\n",
       "\u001b[31merror: failed to push some refs to 'https://github.com/Flora-King/Mildew_Detection_pjkt'\n",
-      "\u001b[m\u001b[33mhint: Updates were rejected because the remote contains work that you do\u001b[m\n",
-      "\u001b[33mhint: not have locally. This is usually caused by another repository pushing\u001b[m\n",
-      "\u001b[33mhint: to the same ref. You may want to first integrate the remote changes\u001b[m\n",
-      "\u001b[33mhint: (e.g., 'git pull ...') before pushing again.\u001b[m\n",
+      "\u001b[m\u001b[33mhint: Updates were rejected because the tip of your current branch is behind\u001b[m\n",
+      "\u001b[33mhint: its remote counterpart. Integrate the remote changes (e.g.\u001b[m\n",
+      "\u001b[33mhint: 'git pull ...') before pushing again.\u001b[m\n",
       "\u001b[33mhint: See the 'Note about fast-forwards' in 'git push --help' for details.\u001b[m\n"
      ]
     }
