Add new files/plots after prediction

--- a/jupyter_notebooks/ModellingEvaluation.ipynb
+++ b/jupyter_notebooks/ModellingEvaluation.ipynb
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 59,
    "metadata": {
     "id": "aKlnIozA4eQO",
     "outputId": "fd09bc1f-adb1-4511-f6ce-492a6af570c0"
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1260,13 +1260,14 @@
      "output_type": "stream",
      "text": [
       "On branch main\n",
-      "Your branch is ahead of 'origin/main' by 6 commits.\n",
-      "  (use \"git push\" to publish your local commits)\n",
+      "Your branch and 'origin/main' have diverged,\n",
+      "and have 7 and 1 different commits each, respectively.\n",
+      "  (use \"git pull\" to merge the remote branch into yours)\n",
       "\n",
       "Changes not staged for commit:\n",
       "  (use \"git add <file>...\" to update what will be committed)\n",
       "  (use \"git restore <file>...\" to discard changes in working directory)\n",
-      "\t\u001b[31mmodified:   .gitignore\u001b[m\n",
+      "\t\u001b[31mmodified:   jupyter_notebooks/ModellingEvaluation.ipynb\u001b[m\n",
       "\n",
       "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
      ]
@@ -1278,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1287,15 +1288,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main c513cdb] Add new files/plots after prediction\n",
-      " 1 file changed, 3 insertions(+), 1 deletion(-)\n"
+      "[main 5a6c100] Add new files/plots after prediction\n",
+      " 1 file changed, 42 insertions(+), 15 deletions(-)\n"
      ]
     }
    ],
@@ -1305,24 +1306,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/bash: line 1: pull.rebase: command not found\n"
+      "error: cannot pull with rebase: You have unstaged changes.\n",
+      "error: please commit or stash them.\n"
      ]
     }
    ],
    "source": [
-    "!gipull.rebase"
+    "!git pull"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
