Create and set up files for streamlit app

--- a/jupyter_notebooks/ModellingEvaluation.ipynb
+++ b/jupyter_notebooks/ModellingEvaluation.ipynb
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1288,15 +1288,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 5a6c100] Add new files/plots after prediction\n",
-      " 1 file changed, 42 insertions(+), 15 deletions(-)\n"
+      "[main c9e60ff] Add new files/plots after prediction\n",
+      " 2 files changed, 18 insertions(+), 15 deletions(-)\n"
      ]
     }
    ],
@@ -1306,15 +1306,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "error: cannot pull with rebase: You have unstaged changes.\n",
-      "error: please commit or stash them.\n"
+      "\u001b[KSuccessfully rebased and updated refs/heads/main.\n"
      ]
     }
    ],
@@ -1324,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1333,20 +1332,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Enumerating objects: 4299, done.\n",
+      "Counting objects: 100% (4299/4299), done.\n",
+      "Delta compression using up to 4 threads\n",
+      "Compressing objects: 100% (4284/4284), done.\n",
+      "Writing objects: 100% (4295/4295), 200.04 MiB | 8.71 MiB/s, done.\n",
+      "Total 4295 (delta 39), reused 0 (delta 0), pack-reused 0\n",
+      "remote: Resolving deltas: 100% (39/39), completed with 2 local objects.\u001b[K\n",
+      "remote: \u001b[1;33mwarning\u001b[m: See https://gh.io/lfs for more information.\u001b[K\n",
+      "remote: \u001b[1;33mwarning\u001b[m: File outputs/v1/powdery_mildew_model.h5 is 85.07 MB; this is larger than GitHub's recommended maximum file size of 50.00 MB\u001b[K\n",
+      "remote: \u001b[1;33mwarning\u001b[m: File outputs/v1/powdery_mildew_model.h5 is 85.07 MB; this is larger than GitHub's recommended maximum file size of 50.00 MB\u001b[K\n",
+      "remote: \u001b[1;33mwarning\u001b[m: GH001: Large files detected. You may want to try Git Large File Storage - https://git-lfs.github.com.\u001b[K\n",
       "To https://github.com/Flora-King/Mildew_Detection_pjkt\n",
-      " \u001b[31m! [rejected]       \u001b[m main -> main (non-fast-forward)\n",
-      "\u001b[31merror: failed to push some refs to 'https://github.com/Flora-King/Mildew_Detection_pjkt'\n",
-      "\u001b[m\u001b[33mhint: Updates were rejected because the tip of your current branch is behind\u001b[m\n",
-      "\u001b[33mhint: its remote counterpart. Integrate the remote changes (e.g.\u001b[m\n",
-      "\u001b[33mhint: 'git pull ...') before pushing again.\u001b[m\n",
-      "\u001b[33mhint: See the 'Note about fast-forwards' in 'git push --help' for details.\u001b[m\n"
+      "   151e1a9..5161d12  main -> main\n"
      ]
     }
    ],
