--- a/jupyter_notebooks/ModellingEvaluation.ipynb
+++ b/jupyter_notebooks/ModellingEvaluation.ipynb
@@ -412,7 +412,7 @@
    "source": [
     "for _ in range(3):\n",
     "    img, label = validation_set.next()\n",
-    "    print(img.shape)   #  (1,256,256,3)\n",
+    "    print(img.shape)   #  (1,50,50,3)\n",
     "    plt.imshow(img[0])\n",
     "    plt.show()"
    ]
@@ -425,7 +425,7 @@
    "source": [
     "for _ in range(3):\n",
     "    img, label = test_set.next()\n",
-    "    print(img.shape)   #  (1,256,256,3)\n",
+    "    print(img.shape)   #  (1,50,50,3)\n",
     "    plt.imshow(img[0])\n",
     "    plt.show()"
    ]
@@ -740,7 +740,7 @@
     "from tensorflow.keras.preprocessing import image\n",
     "\n",
     "pointer = 66 \n",
-    "label = labels[0] # select Uninfected or Parasitized\n",
+    "label = labels[0] # select healthy or infected\n",
     "\n",
     "pil_image = image.load_img(test_path + '/'+ label + '/'+ os.listdir(test_path+'/'+ label)[pointer],\n",
     "                          target_size=image_shape, color_mode='rgb')\n",
