--- a/jupyter_notebooks/DataVisualisation.ipynb
+++ b/jupyter_notebooks/DataVisualisation.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install numpy==1.23.4"
+    "%pip install numpy==1.23.4"
    ]
   },
   {
